--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 
 <body>
     <script src="draw.js"></script>
-    <script src="3dCoil.js"></script>
+    <script src="polarCoil.js"></script>
 </body>
 </html>
